--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,6 @@
 <style>
     body {
-        background-image: url('1.jpg');
+        background-image: url('5ff947553b451.jpg');
         background-size: cover;
         background-repeat: no-repeat;
     }
